[gd_scene load_steps=2 format=2]

[ext_resource path="res://music.gd" type="Script" id=1]

[node name="musicPlayer" type="Node"]
script = ExtResource( 1 )

[node name="music" type="AudioStreamPlayer" parent="."]

[node name="channel1" type="AudioStreamPlayer" parent="."]

[node name="channel2" type="AudioStreamPlayer" parent="."]

[node name="channel3" type="AudioStreamPlayer" parent="."]
